--- a/src/Views/static/Home.css
+++ b/src/Views/static/Home.css
@@ -1,3 +1,7 @@
 .whole_page {
     background-color: rgb(133, 133, 133);
+    background-image: url(backgroundmsm4.png);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
